update with donate

--- a/layouts/partials/donate.html
+++ b/layouts/partials/donate.html
@@ -1,4 +1,4 @@
-  <div id="donate" class="container">
+  <div id="welcome" class="container">
     {{ with .Site.Params.donate }}
     <div class="title">
       <h2>{{ .title }}</h2>
